--- a/Java/pom.xml
+++ b/Java/pom.xml
@@ -80,6 +80,8 @@
         <module>seminar1-oop</module>
         <module>seminar2</module>
         <module>seminar3</module>
+        <module>seminar3-record</module>
+        <module>seminar3-sealed</module>
         <module>seminar4</module>
         <module>seminar5</module>
         <module>seminar6</module>
