--- a/Java/seminar11/pom.xml
+++ b/Java/seminar11/pom.xml
@@ -25,6 +25,12 @@
             <groupId>org.apache.logging.log4j</groupId>
             <artifactId>log4j-slf4j2-impl</artifactId>
         </dependency>
+        <dependency>
+            <groupId>org.projectlombok</groupId>
+            <artifactId>lombok</artifactId>
+            <scope>provided</scope>
+            <version>1.18.34</version>
+        </dependency>
     </dependencies>
 
     <build>
