--- a/Java/pom.xml
+++ b/Java/pom.xml
@@ -95,6 +95,7 @@
         <module>seminar12</module>
         <module>seminar13</module>
         <module>seminar14</module>
+        <module>seminar14-example</module>
         <module>seminar15</module>
     </modules>
 
